--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </tr>
                 <tr>
                     <td><label for="Read">Read</label></td>
-                    <td><input id="read" type="checkbox"></td>
+                    <td><input id="read" type="checkbox" value="READ"></td>
                 </tr>
                 <tr><td><button class="submit-button" >submit</button></td></tr>
                 
@@ -40,12 +40,6 @@
     </div>
 
     <div id="allcards">
-        <div class="card">
-            <h1>Atomic Habits</h1>
-            <h2>by James Clear</h2>
-            <h3>300 Pages</h3>
-            <button>Read</button>
-        </div>
         <div class="card">
             <h1>Atomic Habits</h1>
             <h2>by James Clear</h2>
